--- a/package.json
+++ b/package.json
@@ -4,9 +4,29 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "sass --watch src/scss/styles.scss src/css/styles.css"
+    "start": "sass --watch src/scss/styles.scss src/css/styles.css",
+    "dev": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
-  "dependencies": {
-    "sass": "^1.41.1"
+  "devDependencies": {
+    "autoprefixer": "^10.3.5",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.3.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.3.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "postcss-loader": "^6.1.1",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-unprefixed": "^0.0.2",
+    "resolve-url-loader": "^4.0.0",
+    "sass": "^1.41.1",
+    "sass-loader": "^12.1.0",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.1"
   }
 }
